--- a/tex/2010/3/6.tex
+++ b/tex/2010/3/6.tex
@@ -74,7 +74,7 @@
 
     \item The angle of rotation is the angle between \(O P_0\) and \(O P_2\), and hence
           \begin{align*}
-              \cos \theta & = \frac{\bvect{O P_0} \cdot \bvect{O P_2}}{\abs{\bvect{O P_0}} \cdot \abs{\bvect{O P_2}}} \\
+              \cos \theta & = \frac{\bvect{O P_0} \cdot \bvect{O P_2}}{\abs*{\bvect{O P_0}} \cdot \abs*{\bvect{O P_2}}} \\
                           & = \begin{pmatrix}
                                   1 \\
                                   0 \\
@@ -83,7 +83,7 @@
                                                       \cos \phi \cos \lambda \\
                                                       \sin \phi \cos \lambda \\
                                                       \sin \lambda
-                                                  \end{pmatrix}                                              \\
+                                                  \end{pmatrix}                                                \\
                           & = \cos \phi \cos \lambda,
           \end{align*}
           as desired.
